--- a/package.json
+++ b/package.json
@@ -6,15 +6,29 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["crossword", "typescript", "vite"],
+  "keywords": [
+    "crossword",
+    "typescript",
+    "vite"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^25.2.1",
+    "@vitest/ui": "^4.0.18",
+    "happy-dom": "^20.5.0",
+    "jsdom": "^28.0.0",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "jspdf": "^4.1.0"
